--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/movyx_logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explore the latest HD movies and TV shows with no subscription now." />
+  <meta name="keywords" content="Movies,Movyx,Latest,Netflix,MovieBox,Movie,Nollywood,Netflix" />
+  <meta http-equiv="refresh" content="30" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
